--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First 3D try</title>
+    <link rel="icon" type="image/x-icon" href="/images/BOB.png">
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
