--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
+    <div id="stats"></div>
     <canvas id="experience"></canvas>
     <script type="module" src="/src/main.js"></script>
   </body>
